--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
 
     <string name="Stringimg"> we cannot open this image </string>
 
+    <string name="profile"> Profile </string>
+
 </resources>
